--- a/src/components/Header/Logo/Logo.module.css
+++ b/src/components/Header/Logo/Logo.module.css
@@ -4,6 +4,14 @@
   font-weight: 700;
   font-size: 20px;
   letter-spacing: -0.04em;
+
+  transition:
+    transform 0.3s ease,
+    color 0.3s ease;
+}
+
+.logo:hover {
+  transform: scale(1.05);
 }
 
 .dark {
